// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarcodeScanner renders 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "column",
      "minHeight": 100,
    }
  }
>
  <View
    audio={false}
    codeScanner={[MockFunction]}
    device="mock-device"
    isActive={true}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="barcode-scanner-test"
  />
</View>
`;

exports[`BarcodeScanner renders with mask 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "column",
      "minHeight": 100,
    }
  }
>
  <View
    audio={false}
    codeScanner={[MockFunction]}
    device="mock-device"
    isActive={true}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="barcode-scanner-test"
  >
    <BarcodeMask
      backgroundColor="rgba(0, 0, 0, 0.6)"
      edgeColor="#62B1F6"
      showAnimatedLine={false}
    />
  </View>
</View>
`;

exports[`BarcodeScanner renders with mask with animated line 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "column",
      "minHeight": 100,
    }
  }
>
  <View
    audio={false}
    codeScanner={[MockFunction]}
    device="mock-device"
    isActive={true}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="barcode-scanner-test"
  >
    <BarcodeMask
      backgroundColor="rgba(0, 0, 0, 0.6)"
      edgeColor="#62B1F6"
      showAnimatedLine={true}
    />
  </View>
</View>
`;
